# mealroulette

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  SPECS.md  docker-compose.yml
backend/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/mealroulette/: __init__.py  main.py  worker.py
backend/scripts/: benchmark_generate_week.py  fix_simple_dishes_fixture.py  reroll_experiment.py  setup_test_databases.py  sort_ingredient_seed.py
backend/tests/: conftest.py  test_account_settings.py  test_auth.py  test_backup.py  test_catalog.py  test_composable_meals.py  test_computed_traits.py  test_config.py  test_conversion_approval.py  test_conversion_policy.py  test_cooking_timer_alerts.py  test_errors.py  test_greenfield_signup.py  test_health.py  test_household_isolation.py  test_household_membership.py  test_household_time.py  test_import_dishes.py  test_import_ingredients.py  test_ingredient_proposals.py  test_ingredient_resolver.py  test_meal_package_vectors.py  test_meal_plan_lines.py  test_meal_review_legacy_null_user.py  test_meal_structure.py  test_meal_traits.py  test_migration_033_household_tenancy_identity.py  test_migration_040_ingredient_proposals.py  test_names.py  test_on_the_fly_recipe_traits.py  test_pair_diagnostics.py  test_pair_rejections.py  test_pair_scoring.py  test_phase9_acceptance.py  test_planning.py  test_planning_rule_service.py  test_planning_rules.py  test_public_catalog.py  test_quantities.py  test_recipe_traits.py  (+31 more)
docs/: BACKLOG.md  MVP.md  (+13 more)
(+461 files in other folders)
