[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mealroulette"
version = "0.1.0"
description = "Self-hosted household meal planning application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mealroulette"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "integration: tests that require a database connection",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
